# Bazel build for the `Storage` interface + the engine-agnostic
# `Value`/`Row`/`RowIterator` types. Mirrors the CMake
# `backend_storage` target (`../../CMakeLists.txt`).
#
# Only the abstract interface ships here; the concrete impls
# (`backend/storage/memory/`, `backend/storage/duckdb/`) still build
# from CMake until the Bazel migration reaches them. The
# `googlesql_catalog` adapter in `backend/catalog/` consumes this
# header-only entry point and delegates to whichever `Storage` impl
# the engine constructed at startup.

load("@rules_cc//cc:defs.bzl", "cc_library", "cc_test")

package(default_visibility = ["//visibility:public"])

cc_library(
    name = "storage",
    srcs = ["storage.cc"],
    hdrs = ["storage.h"],
    deps = [
        "//backend/schema",
        "@com_google_absl//absl/status",
        "@com_google_absl//absl/status:statusor",
        "@com_google_absl//absl/strings",
        "@com_google_absl//absl/types:span",
    ],
)

# Volatile in-memory `Storage` impl. Used by every dependency that
# needs a working catalog without DuckDB on the link line — chiefly
# the Query DryRun handler test, which fabricates a small catalog
# and analyzes references against it.
cc_library(
    name = "memory",
    srcs = ["memory/in_memory_storage.cc"],
    hdrs = ["memory/in_memory_storage.h"],
    deps = [
        ":storage",
        "//backend/schema",
        "@com_google_absl//absl/base:core_headers",
        "@com_google_absl//absl/status",
        "@com_google_absl//absl/status:statusor",
        "@com_google_absl//absl/strings",
        "@com_google_absl//absl/synchronization",
        "@com_google_absl//absl/types:span",
    ],
)

# in_memory_storage_test is the Bazel mirror of the CMake
# `in_memory_storage_test` target. Covers AppendRows / ScanRows /
# OverwriteRows shape checks plus the plan-38 CreateReadStream
# row_limit / offset slicing. Build cost is low (no DuckDB on the
# link line) so this stays in the default `task bazel:test` set.
cc_test(
    name = "in_memory_storage_test",
    srcs = ["memory/in_memory_storage_test.cc"],
    deps = [
        ":memory",
        ":storage",
        "//backend/schema",
        "@com_google_absl//absl/status",
        "@com_google_absl//absl/status:statusor",
        "@com_google_absl//absl/strings",
        "@com_google_absl//absl/types:span",
        "@com_google_googletest//:gtest_main",
    ],
)
