# Bazel build for the BigQuery emulator's C++ engine entry point. This
# `cc_binary` links the full GoogleSQL + DuckDB + gRPC stack.
#
# Pull-in list mirrors the runtime wiring in
# `binaries/emulator_main/main.cc`: the DuckDB storage backend, the
# DuckDB engine, the gRPC front door, and the catalog/query handlers
# it registers. The handlers transitively pull in GoogleSQL's
# analyzer (see `//frontend/handlers:query_handler`).
#
# Static C++/C linkage (`-static-libgcc` / `-static-libstdc++`) follows
# the cloud-spanner-emulator precedent: it lets the binary run on
# distros with older libstdc++ than the build host without an explicit
# RPATH dance. `libduckdb.so` still ships as a dynamic dep via
# `//third_party/duckdb`; Bazel parks it next to the binary in
# runfiles, and the cc_import in `third_party/duckdb/duckdb.BUILD.bazel`
# handles the runtime rpath.

load("@rules_cc//cc:defs.bzl", "cc_binary", "cc_library", "cc_test")

package(default_visibility = ["//visibility:public"])

# Generate `version.cc` from `version.cc.tmpl` by substituting
# `EMULATOR_VERSION` / `EMULATOR_COMMIT` / `EMULATOR_BUILD_DATE` from
# the action environment (see `version_gen.sh`'s header for the
# default values). The genrule receives env vars when the wrapping
# build forwards them via `--action_env=EMULATOR_VERSION=...` etc;
# `task emulator:build-engine:bazel` and `.github/workflows/release.yml`
# do exactly that. A plain `bazel build` with no stamping yields the
# `dev` / `none` / `unknown` defaults, matching the goreleaser
# contract on the Go gateway side.
#
# Why a genrule rather than `cc_binary(stamp=1)` + workspace-status:
# `--action_env` invalidation is scoped to this single action, so
# bumping the version only re-emits `version.cc`, re-compiles one TU,
# and re-links — it does NOT re-compile the 8k C++ TUs of GoogleSQL.
# workspace-status injection would be cleaner in pure Bazel terms but
# would require a custom `bazel_status_command` script that every
# caller must wire up; the genrule keeps the contract in one file.
genrule(
    name = "version_cc",
    srcs = ["version.cc.tmpl"],
    outs = ["version.cc"],
    cmd = ("bash $(location version_gen.sh) " +
           "$(location version.cc.tmpl) > $@"),
    tools = ["version_gen.sh"],
)

# Link-time version metadata for `emulator_main`. Pulled into the
# cc_binary as a dep so the only thing that needs to re-link when the
# version flips is this one TU + the binary itself.
cc_library(
    name = "version",
    srcs = [":version_cc"],
    hdrs = ["version.h"],
)

cc_binary(
    name = "emulator_main",
    srcs = ["main.cc"],
    # `-Wl,-rpath,$ORIGIN` lets the binary find a sibling libduckdb.so
    # at run time when it has been copied out of `bazel-bin/` (e.g.
    # staged into `./bin/` for the integration tests, where Bazel's
    # `_solib_k8/` runfiles tree is not present). Bazel injects its
    # own `$ORIGIN/../../_solib_k8/...` entries for the in-place
    # `bazel run` case; the extra `$ORIGIN` entry below is purely
    # defensive for out-of-tree staging.
    linkopts = [
        "-static-libgcc",
        "-static-libstdc++",
        "-Wl,-rpath,$$ORIGIN",
    ],
    deps = [
        ":version",
        "//backend/engine",
        "//backend/engine/coordinator:local_coordinator_engine",
        "//backend/engine/coordinator:routine_rehydrate",
        "//backend/storage",
        "//backend/storage/duckdb:duckdb_storage",
        "//frontend/server:server",
        "@com_google_absl//absl/status:statusor",
    ],
)

# Smoke test for the generated `version.cc`: confirm the symbols are
# defined and the defaults flow through. The test is hermetic by
# design: it never reads env vars and runs against whatever values
# the genrule baked in (defaults `dev/none/unknown` for `bazel test`
# without --action_env). The point is to fail loud if a future edit
# to `version.cc.tmpl` drops a symbol the `--version` flag prints.
cc_test(
    name = "version_test",
    srcs = ["version_test.cc"],
    deps = [
        ":version",
        "@com_google_googletest//:gtest_main",
    ],
)
