# Bazel build for the gRPC handler implementations behind
# `bigquery_emulator.v1.Catalog` and `bigquery_emulator.v1.Query`.
#
# The Query handler links GoogleSQL's analyzer end-to-end; the
# matching type reflector lives in `backend/schema/BUILD.bazel`
# (`googlesql_to_bq`).

load("@rules_cc//cc:defs.bzl", "cc_library", "cc_test")

package(default_visibility = ["//visibility:public"])

cc_library(
    name = "catalog_handler",
    srcs = ["catalog.cc"],
    hdrs = ["catalog.h"],
    deps = [
        "//backend/schema",
        "//backend/storage",
        "//proto:emulator_cc_grpc",
        "//proto:emulator_cc_proto",
        "@com_github_grpc_grpc//:grpc++",
        "@com_google_absl//absl/status",
        "@com_google_absl//absl/status:statusor",
        "@com_google_absl//absl/strings",
        "@com_google_absl//absl/types:span",
    ],
)

cc_library(
    name = "query_handler",
    srcs = ["query.cc"],
    hdrs = ["query.h"],
    deps = [
        "//backend/catalog:googlesql_catalog",
        # `backend/engine` carries the required `Engine*` parameter on
        # `QueryService` and `StreamQueryResults`; the wire path in
        # `binaries/emulator_main/main.cc` threads in a
        # `LocalCoordinatorEngine`.
        "//backend/engine",
        "//backend/schema",
        "//backend/schema:googlesql_to_bq",
        "//backend/storage",
        "//proto:emulator_cc_grpc",
        "//proto:emulator_cc_proto",
        "@com_github_grpc_grpc//:grpc++",
        "@com_google_absl//absl/status",
        "@com_google_absl//absl/status:statusor",
        "@com_google_absl//absl/strings",
        "@googlesql//googlesql/public:analyzer",
        "@googlesql//googlesql/public:analyzer_options",
        "@googlesql//googlesql/public:analyzer_output",
        "@googlesql//googlesql/public:error_helpers",
        "@googlesql//googlesql/public:error_location_cc_proto",
        "@googlesql//googlesql/public:language_options",
        "@googlesql//googlesql/public:options_cc_proto",
        "@googlesql//googlesql/public:simple_catalog",
        "@googlesql//googlesql/public:type",
        "@googlesql//googlesql/resolved_ast",
        "@googlesql//googlesql/resolved_ast:resolved_node_kind_cc_proto",
    ],
)

cc_test(
    name = "query_handler_test",
    srcs = ["query_test.cc"],
    deps = [
        ":query_handler",
        "//backend/engine/coordinator:local_coordinator_engine",
        "//backend/schema",
        "//backend/storage",
        "//backend/storage/duckdb:duckdb_storage",
        "//proto:emulator_cc_proto",
        "@com_github_grpc_grpc//:grpc++",
        "@com_google_absl//absl/status",
        "@com_google_absl//absl/strings",
        "@com_google_absl//absl/types:span",
        "@com_google_googletest//:gtest_main",
    ],
)

# StorageRead handler (plan 37). Mirrors the `catalog_handler` shape:
# header + .cc + the storage_read proto stubs. Plan 37 only wires
# `CreateReadSession`; plan 38 will light up the streaming `ReadRows`
# reply on the same library.
cc_library(
    name = "storage_read_handler",
    srcs = ["storage_read.cc"],
    hdrs = ["storage_read.h"],
    deps = [
        "//backend/schema",
        "//backend/storage",
        # The handler converts `backend::storage::Value` cells onto
        # `bigquery_emulator.v1.Cell` slots for the ReadRows reply;
        # the Cell oneof lives in the emulator proto, so we depend on
        # it explicitly even though the StorageRead RPC surface itself
        # only imports it transitively.
        "//proto:emulator_cc_proto",
        "//proto:storage_read_cc_grpc",
        "//proto:storage_read_cc_proto",
        "@com_github_grpc_grpc//:grpc++",
        "@com_google_absl//absl/status",
        "@com_google_absl//absl/status:statusor",
        "@com_google_absl//absl/strings",
        "@com_google_absl//absl/synchronization",
    ],
)

cc_test(
    name = "storage_read_handler_test",
    srcs = ["storage_read_test.cc"],
    deps = [
        ":storage_read_handler",
        "//backend/schema",
        "//backend/storage",
        "//backend/storage/duckdb:duckdb_storage",
        # The in-process server fixture (StorageReadGrpcTest) needs
        # both the proto and the gRPC stub headers so it can stand
        # up a real client/server pair without the full
        # `frontend/server/server.cc` machinery.
        "//proto:emulator_cc_proto",
        "//proto:storage_read_cc_grpc",
        "//proto:storage_read_cc_proto",
        "@com_github_grpc_grpc//:grpc++",
        "@com_google_absl//absl/strings",
        "@com_google_absl//absl/types:span",
        "@com_google_googletest//:gtest_main",
    ],
)
