# Bazel build for the gRPC handler implementations behind
# `bigquery_emulator.v1.Catalog` and `bigquery_emulator.v1.Query`.
#
# The Query handler links GoogleSQL's analyzer end-to-end; the
# matching type reflector lives in `backend/schema/BUILD.bazel`
# (`googlesql_to_bq`).

load("@rules_cc//cc:defs.bzl", "cc_library", "cc_test")

package(default_visibility = ["//visibility:public"])

cc_library(
    name = "handler_common",
    srcs = ["handler_common.cc"],
    hdrs = ["handler_common.h"],
    deps = [
        "//backend/storage",
        "//proto:emulator_cc_proto",
        "@com_github_grpc_grpc//:grpc++",
        "@com_google_absl//absl/status",
        "@com_google_absl//absl/strings",
    ],
)

cc_library(
    name = "catalog_handler",
    srcs = [
        "catalog.cc",
        "catalog_governance.cc",
        "catalog_routines.cc",
    ],
    hdrs = ["catalog.h"],
    deps = [
        ":handler_common",
        "//backend/catalog:measure_catalog",
        "//backend/catalog:procedure_registry",
        "//backend/catalog:routine_persistence",
        "//backend/catalog:tvf_registry",
        "//backend/catalog:udf_registry",
        "//backend/catalog:view_registry",
        "//backend/engine/coordinator:routine_rehydrate",
        "//backend/schema",
        "//backend/schema:googlesql_to_bq",
        "//backend/storage",
        "//proto:emulator_cc_grpc",
        "//proto:emulator_cc_proto",
        "@com_github_grpc_grpc//:grpc++",
        "@com_google_absl//absl/container:flat_hash_set",
        "@com_google_absl//absl/status",
        "@com_google_absl//absl/status:statusor",
        "@com_google_absl//absl/strings",
        "@com_google_absl//absl/types:span",
        "@googlesql//googlesql/public:catalog",
    ],
)

cc_library(
    name = "query_internal",
    srcs = [
        "query_internal.cc",
        "query_stream_internal.cc",
    ],
    hdrs = ["query_internal.h"],
    deps = [
        "//backend/engine",
        "//backend/engine/semantic:value",
        "//backend/schema",
        "//backend/storage",
        "//proto:emulator_cc_proto",
        "@com_github_grpc_grpc//:grpc++",
        "@com_google_absl//absl/status",
        "@com_google_absl//absl/strings",
        "@googlesql//googlesql/public:analyzer_options",
        "@googlesql//googlesql/public:error_helpers",
        "@googlesql//googlesql/public:error_location_cc_proto",
        "@googlesql//googlesql/public:language_options",
        "@googlesql//googlesql/public:options_cc_proto",
        "@googlesql//googlesql/resolved_ast",
        "@googlesql//googlesql/resolved_ast:resolved_node_kind_cc_proto",
    ],
)

cc_library(
    name = "query_handler",
    srcs = ["query.cc"],
    hdrs = ["query.h"],
    deps = [
        ":query_internal",
        "//backend/catalog:googlesql_catalog",
        "//backend/catalog:udf_registry",
        # `backend/engine` carries the required `Engine*` parameter on
        # `QueryService` and `StreamQueryResults`; the wire path in
        # `binaries/emulator_main/main.cc` threads in a
        # `LocalCoordinatorEngine`.
        "//backend/engine",
        # The `RouteClassifier` + `Disposition` pair surfaces the
        # canonical lowercase-snake route string the handler emits on
        # every reply's trailing `emulator_route` message (see
        # `docs/ENGINE_POLICY.md`).
        "//backend/engine:disposition",
        "//backend/engine/coordinator:route_classifier",
        "//backend/engine/coordinator:local_coordinator_engine",
        "//backend/engine/coordinator:sql_preprocess",
        "//backend/engine/semantic:system_variables",
        "//backend/schema",
        "//backend/schema:googlesql_to_bq",
        "//backend/storage",
        "//proto:emulator_cc_grpc",
        "//proto:emulator_cc_proto",
        "@com_github_grpc_grpc//:grpc++",
        "@com_google_absl//absl/status",
        "@com_google_absl//absl/status:statusor",
        "@com_google_absl//absl/strings",
        "@googlesql//googlesql/public:analyzer",
        "@googlesql//googlesql/public:analyzer_options",
        "@googlesql//googlesql/public:analyzer_output",
        "@googlesql//googlesql/public:error_helpers",
        "@googlesql//googlesql/public:error_location_cc_proto",
        "@googlesql//googlesql/public:language_options",
        "@googlesql//googlesql/public:options_cc_proto",
        "@googlesql//googlesql/public:simple_catalog",
        "@googlesql//googlesql/public:type",
        "@googlesql//googlesql/resolved_ast",
        "@googlesql//googlesql/resolved_ast:resolved_node_kind_cc_proto",
    ],
)

cc_library(
    name = "sqltools_handler",
    srcs = ["sqltools.cc"],
    hdrs = ["sqltools.h"],
    deps = [
        ":query_internal",
        "//backend/catalog:googlesql_catalog",
        "//backend/sqltools:catalog_names",
        "//backend/sqltools:sql_references",
        "//backend/sqltools:sql_tools",
        "//backend/storage",
        "//proto:emulator_cc_grpc",
        "//proto:emulator_cc_proto",
        "@com_github_grpc_grpc//:grpc++",
        "@com_google_absl//absl/status:statusor",
        "@googlesql//googlesql/public:formatter_options",
        "@googlesql//googlesql/public:simple_catalog",
    ],
)

cc_test(
    name = "query_handler_test",
    srcs = [
        "query_dry_run_test.cc",
        "query_execute_test.cc",
        "query_test_fixture.h",
    ],
    deps = [
        ":query_handler",
        "//backend/engine/coordinator:local_coordinator_engine",
        "//backend/schema",
        "//backend/storage",
        "//backend/storage/duckdb:duckdb_storage",
        "//proto:emulator_cc_proto",
        "@com_github_grpc_grpc//:grpc++",
        "@com_google_absl//absl/status",
        "@com_google_absl//absl/strings",
        "@com_google_absl//absl/types:span",
        "@com_google_googletest//:gtest_main",
    ],
)

# StorageRead handler. Mirrors the `catalog_handler` shape:
# header + .cc + the storage_read proto stubs. Serves
# `CreateReadSession` and the streaming `ReadRows` reply.
cc_library(
    name = "storage_read_internal",
    srcs = ["storage_read_internal.cc"],
    hdrs = ["storage_read_internal.h"],
    deps = [
        ":handler_common",
        "//backend/schema",
        "//backend/storage",
        "@com_google_absl//absl/strings",
    ],
)

cc_library(
    name = "storage_read_handler",
    srcs = [
        "storage_read.cc",
        "storage_read_streams.cc",
        "storage_row_restriction_analyze.cc",
    ],
    hdrs = [
        "storage_read.h",
        "storage_row_restriction_analyze.h",
    ],
    deps = [
        ":storage_read_internal",
        "//backend/catalog:googlesql_catalog",
        "//backend/engine/duckdb/transpiler",
        "//backend/schema",
        "//backend/storage",
        # The handler converts `backend::storage::Value` cells onto
        # `bigquery_emulator.v1.Cell` slots for the ReadRows reply;
        # the Cell oneof lives in the emulator proto, so we depend on
        # it explicitly even though the StorageRead RPC surface itself
        # only imports it transitively.
        "//proto:emulator_cc_proto",
        "//proto:storage_read_cc_grpc",
        "//proto:storage_read_cc_proto",
        "@com_github_grpc_grpc//:grpc++",
        "@com_google_absl//absl/status",
        "@com_google_absl//absl/status:statusor",
        "@com_google_absl//absl/strings",
        "@com_google_absl//absl/synchronization",
        "@googlesql//googlesql/public:analyzer",
        "@googlesql//googlesql/public:analyzer_options",
        "@googlesql//googlesql/public:analyzer_output",
        "@googlesql//googlesql/public:language_options",
        "@googlesql//googlesql/public:options_cc_proto",
        "@googlesql//googlesql/public:type",
        "@googlesql//googlesql/resolved_ast",
        "@googlesql//googlesql/resolved_ast:resolved_node_kind_cc_proto",
    ],
)

cc_test(
    name = "storage_read_handler_test",
    srcs = [
        "storage_read_create_session_test.cc",
        "storage_read_grpc_test.cc",
        "storage_read_test_fixture.h",
    ],
    deps = [
        ":storage_read_handler",
        "//backend/schema",
        "//backend/storage",
        "//backend/storage/duckdb:duckdb_storage",
        # The in-process server fixture (StorageReadGrpcTest) needs
        # both the proto and the gRPC stub headers so it can stand
        # up a real client/server pair without the full
        # `frontend/server/server.cc` machinery.
        "//proto:emulator_cc_proto",
        "//proto:storage_read_cc_grpc",
        "//proto:storage_read_cc_proto",
        "@com_github_grpc_grpc//:grpc++",
        "@com_google_absl//absl/strings",
        "@com_google_absl//absl/types:span",
        "@com_google_googletest//:gtest_main",
    ],
)

# StorageWrite handler (storage read/write API surface).
# Mirrors the storage_read_handler shape: header + .cc + the
# storage_write proto stubs. Serves the _default, COMMITTED, and
# BUFFERED stream types end-to-end; PENDING +
# BatchCommitWriteStreams return UNIMPLEMENTED.
cc_library(
    name = "storage_write_internal",
    srcs = ["storage_write_internal.cc"],
    hdrs = ["storage_write_internal.h"],
    deps = [
        ":handler_common",
        "//backend/storage",
        "@com_google_absl//absl/strings",
    ],
)

cc_library(
    name = "storage_write_handler",
    srcs = [
        "storage_write.cc",
        "storage_write_append_rows.cc",
        "storage_write_buffered.cc",
    ],
    hdrs = ["storage_write.h"],
    deps = [
        ":storage_write_internal",
        "//backend/schema",
        "//backend/storage",
        # The handler decodes `bigquery_emulator.v1.Cell` shapes onto
        # `backend::storage::Value`s using the same conversion as the
        # catalog handler; the Cell oneof lives in the emulator
        # proto, so we depend on it explicitly.
        "//proto:emulator_cc_proto",
        "//proto:storage_write_cc_grpc",
        "//proto:storage_write_cc_proto",
        "@com_github_grpc_grpc//:grpc++",
        "@com_google_absl//absl/status",
        "@com_google_absl//absl/status:statusor",
        "@com_google_absl//absl/strings",
        "@com_google_absl//absl/synchronization",
        "@com_google_absl//absl/types:span",
    ],
)

cc_test(
    name = "storage_write_handler_test",
    srcs = [
        "storage_write_grpc_test.cc",
        "storage_write_test.cc",
    ],
    deps = [
        ":storage_write_handler",
        "//backend/schema",
        "//backend/storage",
        "//backend/storage/duckdb:duckdb_storage",
        "//proto:emulator_cc_proto",
        "//proto:storage_write_cc_grpc",
        "//proto:storage_write_cc_proto",
        "@com_github_grpc_grpc//:grpc++",
        "@com_google_absl//absl/strings",
        "@com_google_absl//absl/types:span",
        "@com_google_googletest//:gtest_main",
    ],
)
